--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_rounded_date_picker: ^1.0.5+1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,7 +41,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -62,17 +62,32 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Raleway
+      fonts:
+        - asset: fonts/raleway/Raleway-Light.ttf
+          weight: 300
+          style: normal
+        - asset: fonts/raleway/Raleway-Regular.ttf
+          weight: 400
+          style: normal
+        - asset: fonts/raleway/Raleway-Medium.ttf
+          weight: 500
+          style: normal
+        - asset: fonts/raleway/Raleway-Bold.ttf
+          weight: 600
+          style: normal
+        - asset: fonts/raleway/Raleway-SemiBold.ttf
+          weight: 700
+          style: normal
+    - family: Product Sans
+      fonts:
+        - asset: fonts/product/Product Sans Regular.ttf
+          weight: 400
+          style: normal
+        - asset: fonts/product/Product Sans Bold.ttf
+          weight: 700
+          style: normal
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
